Fix h1 sticky scrolling on patterns page.
h1 sticks to top of page sooner than it did before. It also sits on top of the header background so it doesn't overlap with
text below it on scroll.

--- a/_sass/header.scss
+++ b/_sass/header.scss
@@ -1,5 +1,6 @@
 header {
   background: linear-gradient(-180deg, rgba(255, 255, 255, 1) 0%, rgba(255, 255, 255, 0.9) 60%, rgba(255, 255, 255, 0) 100%);
+  height: 230px;
   padding: 1rem 0;
   position: sticky;
   top: 0;
